[package]
name = "wl-distore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
expanduser = "1.2.2"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wayland-client = "0.31.6"
wayland-protocols-wlr = { version = "0.3.4", features = ["client"] }
